--- a/style.css
+++ b/style.css
@@ -7,3 +7,90 @@ main {
     max-width: 1000px;
     margin: 0 auto;
 }
+
+.recipe-card {
+    position: relative;
+    width: 60%;
+    min-width: 300px;
+    height: 500px;
+    border-radius: 20px;
+    background-color: lightgrey;
+    overflow: hidden;
+}
+
+.recipe-hero {
+    background-position:center;
+    background-size: cover;
+    background-repeat: none;
+    width: 100%;
+    height: 40%;
+    overflow: hidden;
+    position: relative;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    height:100%;
+    width: 100%;
+    background-color: rgb(0 0 0 / 0.4);
+}
+
+h2 {
+    top: 0;
+    margin: 2rem;
+    position: absolute;
+    color: white;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: darkgrey;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "Ingredients";
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    height: 26px;
+    width: 50%;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider:before {
+    content: "Steps";
+    left: calc(50% - 4px);
+  }
