--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
-body {
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+html {
+    width: 100vw;
+    overflow-x: hidden;
 }
+
+body {
+    width: 100vw;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #white;
+}
+
 main {
     width: 80%;
     max-width: 1000px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
+
 .recipe-card {
+    margin: 0 auto;
     position: relative;
     width: 60%;
     min-width: 300px;
-    height: 500px;
     border-radius: 20px;
     background-color: lightgrey;
     overflow: hidden;
@@ -24,6 +33,7 @@ main {
     background-repeat: none;
     width: 100%;
     height: 40%;
+    min-height: 200px;
     overflow: hidden;
     position: relative;
 }
@@ -44,6 +54,12 @@ h2 {
     font-size: 2rem;
     font-weight: bolder;
 }
+
+.recipe-ingredients {
+    padding: 2rem;
+}
+
+
 
 /* The switch - the box around the slider */
 .switch {
@@ -68,7 +84,7 @@ h2 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: darkgrey;
+    background-color: rgb(0 0 0 / 0.5);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -85,7 +101,8 @@ h2 {
     width: 50%;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    color: white;
+    background-color: #69B578;
     -webkit-transition: .4s;
     transition: .4s;
   }
