--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* DOCUMENT */
+
 html {
     width: 100vw;
     overflow-x: hidden;
@@ -9,6 +11,18 @@ body {
     margin: 0;
     background-color: #181D27;
 }
+
+
+h2 {
+    top: 0;
+    margin: 2rem;
+    position: absolute;
+    color: white;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+/* HEADER */
 
 header {
     width: 100%;
@@ -27,6 +41,35 @@ header {
     margin: 0 auto;
 }
 
+.select-wrapper, .settings-button {
+    margin-left: 10px; 
+}
+
+.select-wrapper {
+    display: none;
+}
+
+@media only screen and (min-width: 600px) {
+    .select-wrapper {
+        display: block;
+    }
+    .settings-button {
+        display: none;
+    }
+}
+
+
+/* MAIN */
+
+main {
+    width: 80%;
+    max-width: 1000px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+/* SELECT MENUS */
+
 select {
     height: 70px;
     border: none;
@@ -35,6 +78,8 @@ select {
     margin-right: 1rem;
     cursor: pointer;
 }
+
+/* BUTTON */
 
 button {
     color: white;
@@ -45,6 +90,8 @@ button {
     border-radius: 25px;
     padding: 1rem;
     margin: 10px;
+    display: flex;
+    align-items: center;
 }
 
 button:hover {
@@ -52,12 +99,7 @@ button:hover {
     cursor: pointer;
 }
 
-main {
-    width: 80%;
-    max-width: 1000px;
-    margin: 0 auto;
-    box-sizing: border-box;
-}
+/* RECIPE CARD */
 
 .recipe-card {
     margin: 2rem auto;
@@ -86,15 +128,6 @@ main {
     height:100%;
     width: 100%;
     background-color: rgb(0 0 0 / 0.4);
-}
-
-h2 {
-    top: 0;
-    margin: 2rem;
-    position: absolute;
-    color: white;
-    font-size: 2rem;
-    font-weight: bolder;
 }
 
 .recipe-ingredients {
