--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
 
 
 h2 {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+}
+
+h3 {
     top: 0;
     margin: 2rem;
     position: absolute;
@@ -30,32 +36,21 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 .header-wrapper {
     width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     max-width: 1000px;
     margin: 0 auto;
 }
 
-.select-wrapper, .settings-button {
-    margin-left: 10px; 
-}
-
 .select-wrapper {
-    display: none;
-}
-
-@media only screen and (min-width: 600px) {
-    .select-wrapper {
-        display: block;
-    }
-    .settings-button {
-        display: none;
-    }
+    margin-left: 10px; 
 }
 
 
@@ -77,6 +72,28 @@ select {
     outline: none;
     margin-right: 1rem;
     cursor: pointer;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .header-wrapper {
+        flex-direction: column;
+        box-sizing: border-box;
+    }
+    .select-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+        box-sizing: border-box;
+        padding: 10px;
+    }
+    select {
+        width: 100%;
+        height: 50px;
+        box-sizing: border-box;
+        margin-right: 0;
+    }
 }
 
 /* BUTTON */
