--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@ header {
     align-items: center;
     max-width: 1000px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .select-wrapper {
-    margin-left: 10px; 
+    margin-left: 10px;
+    box-sizing: border-box;
 }
 
 
@@ -76,6 +78,9 @@ select {
 
 
 @media only screen and (max-width: 600px) {
+    header {
+        background-color: transparent;
+    }
     .header-wrapper {
         flex-direction: column;
         box-sizing: border-box;
@@ -87,12 +92,14 @@ select {
         margin: 0;
         box-sizing: border-box;
         padding: 10px;
+        background-color: lightgrey;
+        margin-bottom: 20px;
     }
     select {
         width: 100%;
         height: 50px;
         box-sizing: border-box;
-        margin-right: 0;
+        margin-right: 0
     }
 }
 
