--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* DOCUMENT */
+:root {
+    --display-font: 'Lato', sans-serif;
+    --text-font: 'Roboto', sans-serif;
+}
 
 html {
     width: 100vw;
@@ -7,7 +11,8 @@ html {
 
 body {
     width: 100vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--display-font);
+    font-weight: 0;
     margin: 0;
     background-color: #181D27;
 }
@@ -68,6 +73,7 @@ main {
 /* SELECT MENUS */
 
 select {
+    font-family: var(--display-font);
     height: 70px;
     border: none;
     background-color: transparent;
@@ -91,7 +97,7 @@ select {
         width: 100%;
         margin: 0;
         box-sizing: border-box;
-        padding: 10px;
+        padding: 20px;
         background-color: lightgrey;
         margin-bottom: 20px;
     }
@@ -106,6 +112,7 @@ select {
 /* BUTTON */
 
 button {
+    font-family: var(--display-font);
     color: white;
     font-weight: bolder;
     height: 50px;
@@ -126,6 +133,7 @@ button:hover {
 /* RECIPE CARD */
 
 .recipe-card {
+    font-family: var(--text-font);
     margin: 2rem auto;
     position: relative;
     width: 70%;
@@ -137,9 +145,11 @@ button:hover {
 }
 
 .recipe-hero {
-    background-position:center;
-    background-size: cover;
+    font-family: var(--display-font);
+    background-position: center;
+    background-size:cover;
     background-repeat: none;
+    background-color: black;
     width: 100%;
     height: 40%;
     min-height: 200px;
@@ -156,6 +166,7 @@ button:hover {
 }
 
 .recipe-ingredients {
+    font-family: var(--text-font);
     padding: 2rem;
 }
 
@@ -211,4 +222,40 @@ button:hover {
   input:checked + .slider:before {
     content: "Steps";
     left: calc(50% - 4px);
+  }
+
+  /* SPINNER */
+  
+  @keyframes spin {
+    from {transform: rotate(0deg);}
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes fade-in-out {
+    from {
+      border-bottom: 10px dashed #5fa66e;
+      border-right: 3px dashed #5fa66e;
+      border-top: none;
+      border-left: none;
+    }
+    to {
+      border-bottom: 3px dashed #5fa66e;
+      border-right: 10px dashed #5fa66e;
+      border-top: none;
+      border-left: none;
+    }
+  }
+  
+  .spinner {
+    display: none;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    border-radius: 50%;
+    border-left: none;
+    border-top: none;
+    animation: spin 1s infinite, fade-in-out 1s infinite alternate;
+    animation-timing-function: linear;
   }
