--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     font-family: var(--display-font);
     font-weight: 0;
     margin: 0;
-    background-color: #5fa66e;
+    background-color: #181D27;
 }
 
 
