--- a/style.css
+++ b/style.css
@@ -17,11 +17,21 @@ body {
     background-color: #5fa66e;
 }
 
+#big-message {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+}
 
-h2 {
-    color: white;
-    font-size: 3rem;
-    text-align: center;
+#big-message h2 {
+  color: white;
+  font-size: 3rem;
+}
+
+#big-message li {
+  color: white;
+  font-size: 2rem;
 }
 
 h3 {
