--- a/style.css
+++ b/style.css
@@ -21,15 +21,21 @@ body {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+}
+
+#big-message #greeting {
+  margin: 0 auto;
+  text-align: left;
 }
 
 #big-message h2 {
   color: white;
   font-size: 3rem;
+  text-align: center;
 }
 
-#big-message li {
+#big-message p {
   color: white;
   font-size: 2rem;
 }
