--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ h2 {
 
 h3 {
     top: 0;
-    margin: 2rem;
     position: absolute;
     color: white;
     font-size: 2rem;
     font-weight: bolder;
+    margin: 2rem;
 }
 
 /* HEADER */
@@ -136,10 +136,11 @@ button:hover {
 
 .recipe-card {
     font-family: var(--text-font);
-    margin: 2rem auto;
     position: relative;
-    width: 70%;
+    width: 100%;
     min-width: 300px;
+    max-width: 600px;
+    margin: 0 auto;
     border-radius: 20px;
     background-color: lightgrey;
     overflow: hidden;
@@ -170,7 +171,6 @@ button:hover {
 
 .recipe-ingredients {
     font-family: var(--text-font);
-    padding: 2rem;
 }
 
 
@@ -182,7 +182,6 @@ button:hover {
     display: inline-block;
     width: 100%;
     height: 50px;
-    margin-top: 20px;
   }
   
   /* Hide default HTML checkbox */
@@ -205,6 +204,7 @@ button:hover {
     transition: .4s;
   }
 
+
   .slider:before {
     position: absolute;
     content: "Ingredients";
@@ -221,6 +221,10 @@ button:hover {
     background-color: #69B578;
     -webkit-transition: .4s;
     transition: .4s;
+  }
+
+  .recipe-body {
+      margin: 2rem;
   }
 
   input:checked + .slider:before {
@@ -262,4 +266,8 @@ button:hover {
     border-top: none;
     animation: spin 1s infinite, fade-in-out 1s infinite alternate;
     animation-timing-function: linear;
+  }
+
+  .step, .ingredient {
+      display: block;
   }
