--- a/style.css
+++ b/style.css
@@ -185,8 +185,13 @@ button:hover {
     background-color: rgb(0 0 0 / 0.4);
 }
 
-.recipe-ingredients {
-    font-family: var(--text-font);
+
+.step, .ingredient {
+    font-family: var(--tex-font);
+}
+
+.step {
+    margin-bottom: 1rem;
 }
 
 
@@ -195,58 +200,67 @@ button:hover {
 /* The switch - the box around the slider */
 .switch {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
     height: 50px;
+    background-color: rgb(0 0 0);
+    cursor: pointer;
   }
   
   /* Hide default HTML checkbox */
   .switch input {
+    position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
   }
   
   /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(0 0 0 / 0.5);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
 
 
-  .slider:before {
-    position: absolute;
-    content: "Ingredients";
+  .ingredients-button {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
-    height: 42px;
+    height: 100%;
     width: 50%;
-    left: 4px;
-    bottom: 4px;
     color: white;
     background-color: #69B578;
-    -webkit-transition: .4s;
-    transition: .4s;
+    opacity: 1;
   }
+
+  .steps-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    color: white;
+    background-color: #69B578;
+    opacity: 0.5;
+  }
+
+
+
+  input:checked + .ingredients-button {
+    opacity: 0.5;
+  }
+
+  input:checked ~ .steps-button {
+    opacity: 1;
+  }
+
+  /* ------------------------------------------ */
 
   .recipe-body {
       margin: 2rem;
   }
 
-  input:checked + .slider:before {
-    content: "Steps";
-    left: calc(50% - 4px);
-  }
 
   /* SPINNER */
   
