--- a/style.css
+++ b/style.css
@@ -7,14 +7,20 @@
 html {
     width: 100vw;
     overflow-x: hidden;
+    height: 100%;
+    min-height: 100%;
+    margin: 0;
 }
 
 body {
-    width: 100vw;
+    height: 100%;
     font-family: var(--display-font);
     font-weight: 0;
     margin: 0;
     background-color: #181D27;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #big-message {
@@ -81,10 +87,8 @@ header {
 
 main {
     width: 80%;
-    height: 100%;
     max-width: 1000px;
     margin: 0 auto;
-    box-sizing: border-box;
 }
 
 /* SELECT MENUS */
@@ -185,7 +189,6 @@ button:hover {
     background-color: rgb(0 0 0 / 0.4);
 }
 
-
 .step, .ingredient {
     font-family: var(--tex-font);
 }
@@ -193,7 +196,6 @@ button:hover {
 .step {
     margin-bottom: 1rem;
 }
-
 
 /* INGREDIENTS-STEPS SWITCH */
 
@@ -264,6 +266,7 @@ button:hover {
 
   /* SPINNER */
   
+  
   @keyframes spin {
     from {transform: rotate(0deg);}
     to {
@@ -272,14 +275,14 @@ button:hover {
   }
   @keyframes fade-in-out {
     from {
-      border-bottom: 10px dashed #5fa66e;
-      border-right: 3px dashed #5fa66e;
+      border-bottom: 8px dotted rgb(95 166 110);
+      border-right: 5px dotted rgb(95 166 110);
       border-top: none;
       border-left: none;
     }
     to {
-      border-bottom: 3px dashed #5fa66e;
-      border-right: 10px dashed #5fa66e;
+      border-bottom: 8px dotted rgb(95 166 110);
+      border-right: 5px dotted rgb(95 166 110 / 0.2);
       border-top: none;
       border-left: none;
     }
@@ -287,17 +290,35 @@ button:hover {
   
   .spinner {
     display: none;
-    margin: 0 auto;
     width: 100px;
     height: 100px;
+    margin: 150px auto;
     background-color: transparent;
     border-radius: 50%;
     border-left: none;
     border-top: none;
-    animation: spin 1s infinite, fade-in-out 1s infinite alternate;
-    animation-timing-function: linear;
+    animation: spin 1s infinite linear, fade-in-out 1.3s infinite alternate;
+    flex-shrink: 0;
   }
+  
 
   .step, .ingredient {
       display: block;
+  }
+
+  footer {
+      height: 50px;
+      width: 100%;
+      background-color: #69B578;
+      color: white;
+      font-family: var(--text-font);
+      font-size: small;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      margin-top: 100px;
+      padding: 2rem;
+      box-sizing: border-box;
   }
